# konfuse

./: .coverage  .gitignore  .golangci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  go.mod  konfuse.py  kube_ctx_merge.py  main.go  main_test.go  pyproject.toml
.github/workflows/: ci.yml  release.yml
internal/merger/: merger.go  merger_test.go
tests/: test_merge.py
